# yahoo-finance-crawler

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py  yahoo_finance_crawler.py
tests/: test_crawler.py
